--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "web-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
+  "engines": {
+	  "node": "20.x"
+  },
   "scripts": {
+    "start": "node server.js",
+    "build": "echo 'No build step required'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
